<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.northmo.installassistant.MainActivity">

    <Button
        android:id="@+id/tower_button"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textSize="24sp"
        android:text="@string/tower_button_label">
    </Button>
    <Button
        android:id="@+id/config_button"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textSize="24sp"
        android:text="@string/config_button_label">
    </Button>
    <Button
        android:id="@+id/configfile_button"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textSize="24sp"
        android:text="@string/configfile_button_label">
    </Button>
    <Button
        android:id="@+id/align_button"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textSize="24sp"
        android:text="@string/align_button_label">
    </Button>
    <Button
        android:id="@+id/billing_button"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textSize="24sp"
        android:text="@string/billing_button_label">
    </Button>

</LinearLayout>
